--- a/personal/code-skeleton/index.html
+++ b/personal/code-skeleton/index.html
@@ -1,131 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link href="css/style.css" rel="stylesheet">
-        <link 
-            rel="stylesheet" 
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
-            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
-            crossorigin="anonymous" 
-            referrerpolicy="no-referrer"
-        >
-    </head>
-    <body>
-        <header id="header">
-            <div class="nav-left">
-                <a href="#" class="hamburger"><i class="fa-solid fa-bars"></i></a>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Atelier Personnage</title>
+		<link href="css/style.css" rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+			integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		>
+	</head>
+	<body>
+		<header id="header">
+			<div class="nav-left">
+				<a href="#" class="hamburger"><i class="fa-solid fa-bars"></i></a>
 
-                <!-- Fullscreen mobile menu -->
-                <nav class="mobile-menu">
-                    <a href="#" class="close-menu"><i class="fas fa-times"></i></a>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Collections</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
+				<!-- Fullscreen mobile menu -->
+				<nav class="mobile-menu">
+					<a href="#" class="close-menu"><i class="fas fa-times"></i></a>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Shop</a></li>
+						<li><a href="#">Collections</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</nav>
 
-                <a href="#" class="search"><i class="fa-solid fa-magnifying-glass"></i></a>
-            </div>
+				<a href="#" class="search"><i class="fa-solid fa-magnifying-glass"></i></a>
+			</div>
 
-            <a href="index.html" class="homepage-button"><h2 class="logo">Personage</h2></a>
+			<a href="index.html" class="homepage-button">
+				<h2 class="logo">
+					atelier<br />
+					personnage
+				</h2>
+			</a>
 
-            <div class="nav-right">
-                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
-                <a href="#" class="button"><i class="fa-solid fa-bag-shopping"></i></a>
-            </div>
-        </header>
+			<div class="nav-right">
+				<a href="#" class="second-search"><i class="fa-solid fa-magnifying-glass"></i></a>
+				<a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
+				<a href="#" class="button"><i class="fa-solid fa-bag-shopping"></i></a>
+			</div>
+		</header>
 
-        <div class="search-section">
-            <div class="search-box">
-                <a href="#" class="search-icon-desktop"><i class="fa-solid fa-magnifying-glass"></i></a>
-                <input type="text" placeholder="WHAT ARE YOU LOOKING FOR ?">
-                <a href="#" class="close-search"><i class="fas fa-times"></i></a>
-            </div>
-        </div>
+		<div class="search-section">
+			<div class="search-box">
+				<a href="#" class="search-icon-desktop"><i class="fa-solid fa-magnifying-glass"></i></a>
+				<input type="text" placeholder="WHAT ARE YOU LOOKING FOR ?" />
+				<a href="#" class="close-search"><i class="fas fa-times"></i></a>
+			</div>
+		</div>
 
-        <div class="front-page">
-            <img src="images/IMG_6655.JPG" alt="model standing">
-        </div>
+		<div class="front-page">
+			<img src="images/IMG_6655.JPG" alt="model standing" />
+		</div>
 
-        <script>
-            const menuToggle = document.querySelector('.hamburger');
-            const mobileMenu = document.querySelector('.mobile-menu');
-            const closeMenu = document.querySelector('.close-menu');
+		<script>
+			const menuToggle = document.querySelector('.hamburger');
+			const mobileMenu = document.querySelector('.mobile-menu');
+			const closeMenu = document.querySelector('.close-menu');
 
-            menuToggle.addEventListener('click', (e) => {
-                e.preventDefault();
-                mobileMenu.classList.add('show');
-                searchSection.style.display = 'none';
-                mobileSearchIcon.style.display = 'inline-block';
-            });
+			menuToggle.addEventListener('click', (e) => {
+			    e.preventDefault();
+			    mobileMenu.classList.add('show');
+			    searchSection.style.display = 'none';
+			    mobileSearchIcon.style.display = 'inline-block';
+			});
 
-            closeMenu.addEventListener('click', (e) => {
-                e.preventDefault();
-                mobileMenu.classList.remove('show');
-            });
+			closeMenu.addEventListener('click', (e) => {
+			    e.preventDefault();
+			    mobileMenu.classList.remove('show');
+			});
 
-            // Mobile search toggle
-            const mobileSearchIcon = document.querySelector('#header .search');
-            const searchSection = document.querySelector('.search-section');
-            const closeSearch = document.querySelector('.close-search');
+			// Mobile search toggle
+			const mobileSearchIcon = document.querySelector('#header .search');
+			const desktopSearchIcon = document.querySelector('#header .second-search');
+			const searchSection = document.querySelector('.search-section');
+			const closeSearch = document.querySelector('.close-search');
 
-            mobileSearchIcon.addEventListener('click', (e) => {
-                e.preventDefault();
+			// ====== MOBILE SEARCH TOGGLE ======
+			if (mobileSearchIcon) {
+			    mobileSearchIcon.addEventListener('click', (e) => {
+			        e.preventDefault();
+			        if (window.innerWidth <= 972) {
+			            searchSection.style.display = 'block';
+			            mobileSearchIcon.style.display = 'none';
+			        } else {
+			            searchSection.style.display = 'block';
+			        }
+			    });
+			}
 
-                if (window.innerWidth <= 972) {
-                    // Show the search section
-                    searchSection.style.display = 'block';
+			// ====== DESKTOP SEARCH TOGGLE ======
+			if (desktopSearchIcon) {
+			    desktopSearchIcon.addEventListener('click', (e) => {
+			        e.preventDefault();
+			        const currentDisplay = window.getComputedStyle(searchSection).display;
+			        searchSection.style.display = currentDisplay === 'none' ? 'block' : 'none';
+			    });
+			}
 
-                    // Hide the header search icon
-                    mobileSearchIcon.style.display = 'none';
-                } else {
-                    searchSection.style.display = 'block';
-                }
-            });
+			// ====== CLOSE SEARCH BUTTON ======
+			if (closeSearch) {
+			    closeSearch.addEventListener('click', (e) => {
+			        e.preventDefault();
+			        searchSection.style.display = 'none';
 
-             // close button inside search section
-            const closesearch = document.querySelector('.close-search'); // your close button inside search section
+			        // Only show mobile search icon on mobile
+			        if (window.innerWidth <= 972) {
+			            mobileSearchIcon.style.display = 'inline-block';
+			        }
 
-            if (closeSearch) { // check if element exists
-                closeSearch.addEventListener('click', (e) => {
-                    e.preventDefault();
-                    searchSection.style.display = 'none';
-                    mobileSearchIcon.style.display = 'inline-block'; // show icon again
-                    const searchInput = searchSection.querySelector('input');
-                    searchInput.value = '';
-                });
-            }
+			        const searchInput = searchSection.querySelector('input');
+			        if (searchInput) searchInput.value = '';
+			    });
+			}
 
-            // Responsive behavior on resize
-            window.addEventListener('resize', () => {
-            if (window.innerWidth >= 972) {
-                searchSection.style.display = 'block';
-                mobileSearchIcon.style.display = 'none';
-            } else {
-                searchSection.style.display = 'none';
-                mobileSearchIcon.style.display = 'inline-block';
-            }
-            });
-            
-            // Desktop search toggle
-            if (desktopSearchIcon) {
-                desktopSearchIcon.addEventListener('click', (e) => {
-                    e.preventDefault();
-                    const currentDisplay = window.getComputedStyle(searchSection).display;
-                    if (currentDisplay === 'none') {
-                        searchSection.style.display = 'block';
-                    } else {
-                        searchSection.style.display = 'none';
-                    }
-                });
-            }
-        </script>
+			// ====== WINDOW RESIZE BEHAVIOR ======
+			window.addEventListener('resize', () => {
+			    if (window.innerWidth >= 972) {
+			        // Desktop
+			        searchSection.style.display = 'none';
+			        mobileSearchIcon.style.display = 'none';
+			    } else {
+			        // Mobile
+			        searchSection.style.display = 'none';
+			        mobileSearchIcon.style.display = 'inline-block';
+			    }
+			});
+		</script>
 
-    </body>
+	</body>
 </html>
