--- a/personal/atelier-personnage/shop.html
+++ b/personal/atelier-personnage/shop.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Atelier Personnage</title>
 		<link href="css/style.css" rel="stylesheet" />
+		<link href="css/shop.css" rel="stylesheet" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -15,8 +16,84 @@
 	</head>
 	<body>
 		<div id="header-placeholder"></div>
+        
+		<div class="section">
+		    <h3>READY-TO-WEAR</h3>
+		</div>
 
-		
+		<div class="product-grid">
+            <div class="product-item">
+				<a href="#" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+				<img src="images/Untitled-1Artboard-1.png" alt="hoodie">
+				<h3>BOXY JACKET</h3>
+                <p>$ 1660</p>
+			</div>
+
+			<div class="product-item">
+				<a href="#" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+				<img src="images/h.png" alt="jeans">
+				<h3>ZIP-JEANS</h3>
+                <p>$ 2150</p>
+			</div>
+
+			<div class="product-item">
+				<a href="#" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+				<img src="images/Untitled-1Artboard-1.png" alt="hoodie">
+				<h3>BOXY JACKET</h3>
+                <p>$ 1660</p>
+			</div>
+
+			<div class="product-item">
+				<a href="#" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+				<img src="images/h.png" alt="jeans">
+				<h3>ZIP-JEANS</h3>
+                <p>$ 2150</p>
+			</div>
+
+			<div class="product-item">
+				<a href="#" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+				<img src="images/Untitled-1Artboard-1.png" alt="hoodie">
+				<h3>BOXY JACKET</h3>
+                <p>$ 1660</p>
+			</div>
+
+			<div class="product-item">
+				<a href="#" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+				<img src="images/h.png" alt="jeans">
+				<h3>ZIP-JEANS</h3>
+                <p>$ 2150</p>
+			</div>
+
+			<div class="product-item">
+				<a href="#" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+				<img src="images/Untitled-1Artboard-1.png" alt="hoodie">
+				<h3>BOXY JACKET</h3>
+                <p>$ 1660</p>
+			</div>
+
+			<div class="product-item">
+				<a href="#" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+				<img src="images/h.png" alt="jeans">
+				<h3>ZIP-JEANS</h3>
+                <p>$ 2150</p>
+			</div>
+		</div>
 
 		<div id="footer-placeholder"></div>
 
@@ -46,5 +123,7 @@
                 });
             });
         </script>
+
+		<script src="js/shop.js"></script>
 	</body>
 </html>
