--- a/personal/atelier-personnage/index.html
+++ b/personal/atelier-personnage/index.html
@@ -17,7 +17,35 @@
 		<div id="header-placeholder"></div>
 
 		<div class="front-page">
-			<img src="images/IMG_6655.JPG" alt="model standing" />
+			<video class="hero-video" autoplay muted loop playsinline>
+			    <source src="videos/ScreenRecording_10-25-2025 15-01-53_1.mov" type="video/mp4">
+			</video>
+
+			<div class="video-text">
+                <a href="#">DISCOVER MORE</a>
+			</div>
+		</div>
+
+		<div class="image-grid">
+			<div class="grid-item">
+                <img src="images/IMG_7008 3.JPG" alt="runway">
+				<a href="#">SHOP NOW</a>
+			</div>
+
+			<div class="grid-item">
+                <img src="images/IMG_7009 3.JPG" alt="runway">
+				<a href="#">SHOP NOW</a>
+			</div>
+
+			<div class="grid-item">
+                <img src="images/IMG_7059.JPG" alt="runway">
+				<a href="#">SHOP NOW</a>
+			</div>
+
+			<div class="grid-item">
+                <img src="images/IMG_7080.JPG" alt="runway">
+				<a href="#">SHOP NOW</a>
+			</div>
 		</div>
 
 		<div id="footer-placeholder"></div>
