--- a/personal/atelier-personnage/index.html
+++ b/personal/atelier-personnage/index.html
@@ -36,17 +36,27 @@
                 <img src="images/IMG_7009 3.JPG" alt="runway">
 				<a href="#">SHOP NOW</a>
 			</div>
-
+		</div>
+        
+		<div class="second-item">
+		<img src="images/S51AH0207_M35477_510_F.jpg" alt="coat" class="match-grid-size">
+        </div>
+		
+		<div class="image-grid">
 			<div class="grid-item">
                 <img src="images/IMG_7059.JPG" alt="runway">
 				<a href="#">SHOP NOW</a>
 			</div>
 
 			<div class="grid-item">
-                <img src="images/IMG_7080.JPG" alt="runway">
+                <img src="images/IMG_7079.JPG" alt="runway">
 				<a href="#">SHOP NOW</a>
 			</div>
 		</div>
+        
+		<div class="second-item">
+		    <img src="images/S97WS0082_P7454_HB130_F.jpg" alt="shoes" class="match-grid-size">
+        </div>
 
 		<div id="footer-placeholder"></div>
 
