--- a/personal/atelier-personnage/index.html
+++ b/personal/atelier-personnage/index.html
@@ -19,43 +19,46 @@
 		<div class="front-page">
 			<video class="hero-video" autoplay muted loop playsinline>
 			    <source src="videos/ScreenRecording_10-25-2025 15-01-53_1.mov" type="video/mp4">
+				<a href="#" class="btn">DISCOVER MORE</a>
 			</video>
 
 			<div class="video-text">
-                <a href="#">DISCOVER MORE</a>
+                <a href="#" class="btn">DISCOVER MORE</a>
 			</div>
 		</div>
 
 		<div class="image-grid">
 			<div class="grid-item">
                 <img src="images/IMG_7008 3.JPG" alt="runway">
-				<a href="#">SHOP NOW</a>
+				<a href="#" class="btn">SHOP NOW</a>
 			</div>
 
 			<div class="grid-item">
                 <img src="images/IMG_7009 3.JPG" alt="runway">
-				<a href="#">SHOP NOW</a>
+				<a href="#" class="btn">SHOP NOW</a>
 			</div>
 		</div>
         
 		<div class="second-item">
-		<img src="images/S51AH0207_M35477_510_F.jpg" alt="coat" class="match-grid-size">
+		    <img src="images/S51AH0207_M35477_510_F.jpg" alt="coat" class="match-grid-size">
+		    <a href="#" class="btn">SHOP NOW</a>
         </div>
 		
 		<div class="image-grid">
 			<div class="grid-item">
                 <img src="images/IMG_7059.JPG" alt="runway">
-				<a href="#">SHOP NOW</a>
+				<a href="#" class="btn">SHOP NOW</a>
 			</div>
 
 			<div class="grid-item">
                 <img src="images/IMG_7079.JPG" alt="runway">
-				<a href="#">SHOP NOW</a>
+				<a href="#" class="btn">SHOP NOW</a>
 			</div>
 		</div>
         
 		<div class="second-item">
 		    <img src="images/S97WS0082_P7454_HB130_F.jpg" alt="shoes" class="match-grid-size">
+			<a href="#" class="btn">SHOP NOW</a>
         </div>
 
 		<div id="footer-placeholder"></div>
