--- a/personal/atelier-personnage/index.html
+++ b/personal/atelier-personnage/index.html
@@ -29,12 +29,12 @@
 
 		<div class="image-grid">
 			<div class="grid-item">
-                <img src="images/IMG_7008 3.JPG" alt="runway">
+                <img src="images/front2.JPG" alt="runway">
 				<a href="#" class="btn">SHOP NOW</a>
 			</div>
 
 			<div class="grid-item">
-                <img src="images/IMG_7009 3.JPG" alt="runway">
+                <img src="images/front3.JPG" alt="runway">
 				<a href="#" class="btn">SHOP NOW</a>
 			</div>
 		</div>
@@ -46,12 +46,12 @@
 		
 		<div class="image-grid">
 			<div class="grid-item">
-                <img src="images/IMG_7059.JPG" alt="runway">
+                <img src="images/front5.JPG" alt="runway">
 				<a href="#" class="btn">SHOP NOW</a>
 			</div>
 
 			<div class="grid-item">
-                <img src="images/IMG_7079.JPG" alt="runway">
+                <img src="images/front6.JPG" alt="runway">
 				<a href="#" class="btn">SHOP NOW</a>
 			</div>
 		</div>
