--- a/personal/atelier-personnage/shop.html
+++ b/personal/atelier-personnage/shop.html
@@ -1,129 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Atelier Personnage</title>
-		<link href="css/style.css" rel="stylesheet" />
-		<link href="css/shop.css" rel="stylesheet" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-			integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-	</head>
-	<body>
-		<div id="header-placeholder"></div>
-        
-		<div class="section">
-		    <h3>READY-TO-WEAR</h3>
-		</div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Atelier Personnage</title>
+        <link href="css/style.css" rel="stylesheet" />
+        <link href="css/shop.css" rel="stylesheet" />
+        <link 
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            crossorigin="anonymous"
+        />
+    </head>
 
-		<div class="product-grid">
+    <body>
+        <div id="header-placeholder"></div>
+
+        <div class="section">
+            <h3>READY-TO-WEAR</h3>
+        </div>
+
+        <div class="product-grid">
             <div class="product-item">
-				<a href="#" class="button">
+                <a href="#" class="button">
                     <i class="fa-regular fa-bookmark"></i>
                 </a>
-				<img src="images/Untitled-1Artboard-1.png" alt="hoodie">
-				<h3>BOXY JACKET</h3>
+
+                <div class="image-slider">
+                    <button class="arrow left">&#10094;</button>
+                    <img src="images/item9.WEBP" class="active" alt="front" />
+                    <img src="images/item8.WEBP" alt="back" />
+                    <button class="arrow right">&#10095;</button>
+                </div>
+
+                <h3>BOXY JACKET</h3>
                 <p>$ 1660</p>
-			</div>
+            </div>
 
-			<div class="product-item">
-				<a href="#" class="button">
+            <div class="product-item">
+                <a href="#" class="button">
                     <i class="fa-regular fa-bookmark"></i>
                 </a>
-				<img src="images/h.png" alt="jeans">
-				<h3>ZIP-JEANS</h3>
-                <p>$ 2150</p>
-			</div>
 
-			<div class="product-item">
-				<a href="#" class="button">
+                <div class="image-slider">
+                    <button class="arrow left">&#10094;</button>
+                    <img src="images/tshirt1.WEBP" class="active" alt="front" />
+                    <img src="images/tshirt2.AVIF" alt="back" />
+                    <img src="images/tshirt3.AVIF" alt="side" />
+                    <button class="arrow right">&#10095;</button>
+                </div>
+
+                <h3>BOXY JACKET</h3>
+                <p>$ 1075</p>
+            </div>
+
+            <div class="product-item">
+                <a href="#" class="button">
                     <i class="fa-regular fa-bookmark"></i>
                 </a>
-				<img src="images/Untitled-1Artboard-1.png" alt="hoodie">
-				<h3>BOXY JACKET</h3>
-                <p>$ 1660</p>
-			</div>
 
-			<div class="product-item">
-				<a href="#" class="button">
+                <div class="image-slider">
+                    <button class="arrow left">&#10094;</button>
+                    <img src="images/jacket1.AVIF" class="active" alt="front" />
+                    <img src="images/jacket2.AVIF" alt="back" />
+                    <img src="images/jacket3.AVIF" alt="side" />
+                    <button class="arrow right">&#10095;</button>
+                </div>
+
+                <h3>BOXY JACKET</h3>
+                <p>$ 3885</p>
+            </div>
+
+            <div class="product-item">
+                <a href="#" class="button">
                     <i class="fa-regular fa-bookmark"></i>
                 </a>
-				<img src="images/h.png" alt="jeans">
-				<h3>ZIP-JEANS</h3>
-                <p>$ 2150</p>
-			</div>
 
-			<div class="product-item">
-				<a href="#" class="button">
-                    <i class="fa-regular fa-bookmark"></i>
-                </a>
-				<img src="images/Untitled-1Artboard-1.png" alt="hoodie">
-				<h3>BOXY JACKET</h3>
-                <p>$ 1660</p>
-			</div>
+                <div class="image-slider">
+                    <button class="arrow left">&#10094;</button>
+                    <img src="images/pants1.WEBP" class="active" alt="front" />
+                    <img src="images/pants2.AVIF" alt="back" />
+                    <img src="images/pants3.AVIF" alt="side" />
+                    <button class="arrow right">&#10095;</button>
+                </div>
 
-			<div class="product-item">
-				<a href="#" class="button">
-                    <i class="fa-regular fa-bookmark"></i>
-                </a>
-				<img src="images/h.png" alt="jeans">
-				<h3>ZIP-JEANS</h3>
-                <p>$ 2150</p>
-			</div>
+                <h3>BOXY JACKET</h3>
+                <p>$ 1620</p>
+            </div>
+        </div>
 
-			<div class="product-item">
-				<a href="#" class="button">
-                    <i class="fa-regular fa-bookmark"></i>
-                </a>
-				<img src="images/Untitled-1Artboard-1.png" alt="hoodie">
-				<h3>BOXY JACKET</h3>
-                <p>$ 1660</p>
-			</div>
+        <div id="footer-placeholder"></div>
 
-			<div class="product-item">
-				<a href="#" class="button">
-                    <i class="fa-regular fa-bookmark"></i>
-                </a>
-				<img src="images/h.png" alt="jeans">
-				<h3>ZIP-JEANS</h3>
-                <p>$ 2150</p>
-			</div>
-		</div>
+        <script src="js/shop.js"></script>
 
-		<div id="footer-placeholder"></div>
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                // Load header
+                fetch("partials/header.html")
+                    .then(response => response.text())
+                    .then(data => {
+                        document.getElementById("header-placeholder").innerHTML = data;
 
-		<script>
-        document.addEventListener("DOMContentLoaded", () => {
-			// Load header
-            fetch("partials/header.html")
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById("header-placeholder").innerHTML = data;
+                        // Once the header loads, attach your JS for menu & search
+                        const script = document.createElement("script");
+                        script.src = "js/header.js";
+                        document.body.appendChild(script);
+                    });
 
-                    // Once the header loads, attach your JS for menu & search
-                    const script = document.createElement("script");
-                    script.src = "js/header.js";
-                    document.body.appendChild(script);
-                });
-
-				// Load footer
+                // Load footer
                 fetch("partials/footer.html")
-                .then(res => res.text())
-                .then(data => {
-                    document.getElementById("footer-placeholder").innerHTML = data;
-                    // Optional footer script
-                    const script = document.createElement("script");
-                    script.src = "js/footer.js";
-                    document.body.appendChild(script);
-                });
+                    .then(res => res.text())
+                    .then(data => {
+                        document.getElementById("footer-placeholder").innerHTML = data;
+
+                        // Optional footer script
+                        const script = document.createElement("script");
+                        script.src = "js/footer.js";
+                        document.body.appendChild(script);
+                    });
             });
         </script>
-
-		<script src="js/shop.js"></script>
-	</body>
+    </body>
 </html>
