--- a/personal/atelier-personnage/index.html
+++ b/personal/atelier-personnage/index.html
@@ -28,7 +28,7 @@
 		</div>
 
 		<div class="image-grid">
-			<div class="grid-item">
+			<div class="grid-item ">
                 <img src="images/front2.JPG" alt="runway">
 				<a href="#" class="btn">SHOP NOW</a>
 			</div>
@@ -44,7 +44,7 @@
 		    <a href="#" class="btn">SHOP NOW</a>
         </div>
 		
-		<div class="image-grid">
+		<div class="image-grid hidden">
 			<div class="grid-item">
                 <img src="images/front5.JPG" alt="runway">
 				<a href="#" class="btn">SHOP NOW</a>
@@ -56,7 +56,7 @@
 			</div>
 		</div>
         
-		<div class="second-item">
+		<div class="second-item hidden">
 		    <img src="images/S97WS0082_P7454_HB130_F.jpg" alt="shoes" class="match-grid-size">
 			<a href="#" class="btn">SHOP NOW</a>
         </div>
