--- a/personal/atelier-personnage/saved.html
+++ b/personal/atelier-personnage/saved.html
@@ -24,21 +24,14 @@
       </div>
     </main>
 
+    <!-- Floating color dropdown -->
+<div id="colorDropdown" class="size-dropdown" aria-hidden="true">
+  <ul class="size-dropdown-list" role="menu" aria-label="Colors"></ul>
+</div>
+
     <!-- Floating Maison-Margiela-style size dropdown -->
     <div id="sizeDropdown" class="size-dropdown" aria-hidden="true">
-      <ul class="size-dropdown-list" role="menu" aria-label="Sizes">
-        <li class="disabled" role="menuitem">36 Out of Stock</li>
-        <li class="disabled" role="menuitem">38 Out of Stock</li>
-        <li role="menuitem">40</li>
-        <li role="menuitem">42</li>
-        <li role="menuitem">44</li>
-        <li role="menuitem">46</li>
-        <li role="menuitem">48</li>
-        <li role="menuitem">50</li>
-        <li role="menuitem">52</li>
-        <li role="menuitem">54</li>
-        <li role="menuitem">56</li>
-      </ul>
+      <ul class="size-dropdown-list" role="menu" aria-label="Sizes"></ul>
     </div>
 
     <div id="footer-placeholder"></div>
@@ -67,6 +60,7 @@
       });
     </script>
 
+    <script src="js/products.js"></script>
     <script src="js/saved.js"></script>
   </body>
 </html>
