--- a/personal/atelier-personnage/saved.html
+++ b/personal/atelier-personnage/saved.html
@@ -21,6 +21,7 @@
 
       <div id="saved-items-container" class="saved-container">
         <p class="empty-message">Your list is empty</p>
+        <a href="shop.html" class="saved-button">Continue Shopping</a>
       </div>
     </main>
 
