--- a/personal/atelier-personnage/shop.html
+++ b/personal/atelier-personnage/shop.html
@@ -32,6 +32,7 @@
           <img src="images/item9.WEBP" class="active" alt="front" />
           <img src="images/item8.WEBP" alt="back" />
           <button class="arrow right">&#10095;</button>
+          <div class="slider-indicators"></div>
         </div>
 
         <h3>RELAXED FIT PANTS</h3>
@@ -50,6 +51,7 @@
           <img src="images/tshirt2.AVIF" alt="back" />
           <img src="images/tshirt3.AVIF" alt="side" />
           <button class="arrow right">&#10095;</button>
+          <div class="slider-indicators"></div>
         </div>
 
         <h3>RAGLAN OVERSIZE T-SHIRT</h3>
@@ -68,6 +70,7 @@
           <img src="images/jacket2.AVIF" alt="back" />
           <img src="images/jacket3.AVIF" alt="side" />
           <button class="arrow right">&#10095;</button>
+          <div class="slider-indicators"></div>
         </div>
 
         <h3>BOXY JACKET</h3>
@@ -86,6 +89,7 @@
           <img src="images/pants2.AVIF" alt="back" />
           <img src="images/pants3.AVIF" alt="side" />
           <button class="arrow right">&#10095;</button>
+          <div class="slider-indicators"></div>
         </div>
 
         <h3>BAGGY PANTS</h3>
