--- a/personal/atelier-personnage/saved.html
+++ b/personal/atelier-personnage/saved.html
@@ -16,7 +16,7 @@
 
     <main class="saved-page">
       <section class="section">
-        <h3>SAVED ITEMS</h3>
+        <h3>WISLIST</h3>
       </section>
 
       <div id="saved-items-container" class="saved-container">
