--- a/personal/atelier-personnage/bag.html
+++ b/personal/atelier-personnage/bag.html
@@ -17,7 +17,7 @@
     <div id="header-placeholder"></div>
 
     <div id="space">
-        <h3>BAG</h3>
+      <h3>BAG</h3>
     </div>
 
     <main id="bag-page">
@@ -56,6 +56,56 @@
             <i class="fab fa-apple"></i> Pay
           </button>
           <button id="checkout-btn">PROCEED TO CHECKOUT</button>
+
+          <br />
+
+          <div class="order-info">
+            <div class="info-item">
+              <button class="info-toggle">
+                <i class="fa-regular fa-circle-question"></i>
+                <span>Need Help?</span>
+              </button>
+              <div class="info-content">
+                <p>
+                  For any questions on your order, or to request assistance,
+                  go to the Client Care area.
+                </p>
+              </div>
+            </div>
+
+            <div class="info-item">
+              <button class="info-toggle">
+                <i class="fa-regular fa-credit-card"></i>
+                <span>Payment Methods</span>
+              </button>
+              <div class="info-content">
+                <p>We accept all major credit/debit cards and PayPal.</p>
+              </div>
+            </div>
+
+            <div class="info-item">
+              <button class="info-toggle">
+                <i class="fa-solid fa-lock"></i>
+                <span>Secure Payment</span>
+              </button>
+              <div class="info-content">
+                <p>
+                  This site uses state-of-the-art systems to secure and encrypt
+                  your payment data, guaranteeing a high level of security.
+                </p>
+              </div>
+            </div>
+
+            <div class="info-item">
+              <button class="info-toggle">
+                <i class="fa-regular fa-face-smile"></i>
+                <span>Contact Us</span>
+              </button>
+              <div class="info-content">
+                <p>Call 833 561 0945 or send us an email.</p>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
