--- a/personal/atelier-personnage/index.html
+++ b/personal/atelier-personnage/index.html
@@ -1,96 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Atelier Personnage</title>
-		<link href="css/style.css" rel="stylesheet" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-			integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-	</head>
-	<body>
-		<div id="header-placeholder"></div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Atelier Personnage</title>
+        <link href="css/style.css" rel="stylesheet" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+    </head>
+    <body>
+        <div id="header-placeholder"></div>
 
-		<div class="front-page">
-			<video class="hero-video" autoplay muted loop playsinline>
-			    <source src="videos/ScreenRecording_10-25-2025 15-01-53_1.mov" type="video/mp4">
-				<a href="#" class="btn">DISCOVER MORE</a>
-			</video>
-
-			<div class="video-text">
+        <div class="front-page">
+            <video class="hero-video" autoplay muted loop playsinline>
+                <source src="videos/ScreenRecording_10-25-2025 15-01-53_1.mov" type="video/mp4" />
+            </video>
+            <div class="video-text">
+                <p class="hero-title">A REFLECTION OF MYSELF</p>
                 <a href="#" class="btn">DISCOVER MORE</a>
-			</div>
-		</div>
-
-		<div class="image-grid">
-			<div class="grid-item ">
-                <img src="images/front2.JPG" alt="runway">
-				<a href="#" class="btn">SHOP NOW</a>
-			</div>
-
-			<div class="grid-item">
-                <img src="images/front3.JPG" alt="runway">
-				<a href="#" class="btn">SHOP NOW</a>
-			</div>
-		</div>
-        
-		<div class="second-item">
-		    <img src="images/S51AH0207_M35477_510_F.jpg" alt="coat" class="match-grid-size">
-		    <a href="#" class="btn">SHOP NOW</a>
-        </div>
-		
-		<div class="image-grid hidden">
-			<div class="grid-item">
-                <img src="images/front5.JPG" alt="runway">
-				<a href="#" class="btn">SHOP NOW</a>
-			</div>
-
-			<div class="grid-item">
-                <img src="images/front6.JPG" alt="runway">
-				<a href="#" class="btn">SHOP NOW</a>
-			</div>
-		</div>
-        
-		<div class="second-item hidden">
-		    <img src="images/S97WS0082_P7454_HB130_F.jpg" alt="shoes" class="match-grid-size">
-			<a href="#" class="btn">SHOP NOW</a>
+            </div>
         </div>
 
-		<div id="footer-placeholder"></div>
+        <div class="image-grid">
+            <div class="grid-item">
+                <img src="images/front2.JPG" alt="runway" />
+                <div class="hero-wrap">
+                    <p class="hero-title">His Style</p>
+                    <a href="#" class="btn">SHOP NOW</a>
+                </div>
+            </div>
 
-		<script>
-        document.addEventListener("DOMContentLoaded", () => {
-			// Load header
-            fetch("partials/header.html")
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById("header-placeholder").innerHTML = data;
+            <div class="grid-item">
+                <img src="images/front3.JPG" alt="runway" />
+                <div class="hero-wrap">
+                    <p class="hero-title">Her Style</p>
+                    <a href="#" class="btn">SHOP NOW</a>
+                </div>
+            </div>
+        </div>
 
-                    // Once the header loads, attach your JS for menu & search
-                    // Wait a moment to make sure the header is fully added before loading header.js
-                    setTimeout(() => {
-                        const script = document.createElement("script");
-                        script.src = "js/header.js";
-                        document.body.appendChild(script);
-                    }, 100); // 100 milliseconds = 0.1 second
-                });
+        <div class="second-item">
+            <img src="images/S51AH0207_M35477_510_F.jpg" alt="coat" class="match-grid-size" />
+            <div class="hero-wrap">
+                <p class="hero-title">Cotton Trench Coat</p>
+                <a href="#" class="btn">SHOP NOW</a>
+            </div>
+        </div>
 
-				// Load footer
+        <div class="image-grid hidden">
+            <div class="grid-item">
+                <img src="images/front5.JPG" alt="runway" />
+                <div class="hero-wrap">
+                    <p class="hero-title">His Style</p>
+                    <a href="#" class="btn">SHOP NOW</a>
+                </div>
+            </div>
+
+            <div class="grid-item">
+                <img src="images/front6.JPG" alt="runway" />
+                <div class="hero-wrap">
+                    <p class="hero-title">Her Style</p>
+                    <a href="#" class="btn">SHOP NOW</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="second-item hidden">
+            <img src="images/S97WS0082_P7454_HB130_F.jpg" alt="shoes" class="match-grid-size" />
+            <div class="hero-wrap">
+                <p class="hero-title">Loved to Death Sneakers</p>
+                <a href="#" class="btn">SHOP NOW</a>
+            </div>
+        </div>
+
+        <div id="footer-placeholder"></div>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                fetch("partials/header.html")
+                    .then(response => response.text())
+                    .then(data => {
+                        document.getElementById("header-placeholder").innerHTML = data;
+                        setTimeout(() => {
+                            const script = document.createElement("script");
+                            script.src = "js/header.js";
+                            document.body.appendChild(script);
+                        }, 100);
+                    });
+
                 fetch("partials/footer.html")
-                .then(res => res.text())
-                .then(data => {
-                    document.getElementById("footer-placeholder").innerHTML = data;
-                    // Optional footer script
-                    const script = document.createElement("script");
-                    script.src = "js/footer.js";
-                    document.body.appendChild(script);
-                });
+                    .then(res => res.text())
+                    .then(data => {
+                        document.getElementById("footer-placeholder").innerHTML = data;
+                        const script = document.createElement("script");
+                        script.src = "js/footer.js";
+                        document.body.appendChild(script);
+                    });
             });
         </script>
-	</body>
+    </body>
 </html>
